--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.3",
     "mongodb": "^6.5.0",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
