--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "startup",
-  "version": "1.0.0",
-  "description": "Trying to eat healthier or struggling to keep all of your favorite recipes organized? Want to try your friend's favorite recipes? Introducing \"Healthy Recipes\". Share and try favorite recipes with those you trust and hear what they have to say about their newly discovered recipes. No longer scrolling through recipes that don't fit your diet or are too bland to even try. Keep track of your favorite recipes to make again and again to satisfy that craving for deliciousness.",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.3",
-    "mongodb": "^6.5.0",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1",
-    "ws": "^8.16.0"
+  "name": "startup-react",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@playwright/test": "^1.42.1",
-    "@types/node": "^20.11.30"
+    "vite": "^5.2.8"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3"
   }
 }
